--- a/Controls/GoogleAnalyticsJavascript/src/DotVVM.Contrib.Samples/DotVVM.Contrib.Samples.csproj
+++ b/Controls/GoogleAnalyticsJavascript/src/DotVVM.Contrib.Samples/DotVVM.Contrib.Samples.csproj
@@ -12,15 +12,15 @@
     <Content Include="Views\_master.dotmaster" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="DotVVM" Version="2.0.0" />
+    <PackageReference Include="DotVVM" Version="2.1.0" />
     <PackageReference Include="Microsoft.AspNetCore" Version="2.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.0.1" />
-    <PackageReference Include="DotVVM.AspNetCore" Version="2.0.0" />
+    <PackageReference Include="DotVVM.AspNetCore" Version="2.1.0" />
   </ItemGroup>
   <ItemGroup>
     <DotNetCliToolReference Include="DotVVM.Compiler.Light" Version="1.1.0.1" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\DotVVM.Contrib\DotVVM.Contrib.csproj" />
+    <ProjectReference Include="..\DotVVM.Contrib\DotVVM.Contrib.GoogleAnalyticsJavascript.csproj" />
   </ItemGroup>
 </Project>
