--- a/Controls/Select2/src/DotVVM.Contrib.Samples/DotVVM.Contrib.Samples.csproj
+++ b/Controls/Select2/src/DotVVM.Contrib.Samples/DotVVM.Contrib.Samples.csproj
@@ -18,12 +18,12 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore" Version="2.0.1" />
 		<PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.0.1" />
-		<PackageReference Include="DotVVM.AspNetCore" Version="2.0.0" />
+		<PackageReference Include="DotVVM.AspNetCore" Version="2.1.0" />
 	</ItemGroup>
   <ItemGroup>
     <DotNetCliToolReference Include="DotVVM.Compiler.Light" Version="1.1.6.1" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\DotVVM.Contrib\DotVVM.Contrib.csproj" />
+    <ProjectReference Include="..\DotVVM.Contrib\DotVVM.Contrib.Select2.csproj" />
   </ItemGroup>
 </Project>
