--- a/Controls/_template/src/DotVVM.Contrib/DotVVM.Contrib.csproj
+++ b/Controls/_template/src/DotVVM.Contrib/DotVVM.Contrib.csproj
@@ -18,6 +18,7 @@
     <GenerateAssemblyVersionAttribute>false</GenerateAssemblyVersionAttribute>
     <GenerateAssemblyFileVersionAttribute>false</GenerateAssemblyFileVersionAttribute>
     <PreserveCompilationContext>true</PreserveCompilationContext>
+    <AssemblyName>DotVVM.Contrib.ControlName</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
@@ -26,7 +27,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="DotVVM" Version="2.0.0" />
+    <PackageReference Include="DotVVM" Version="2.1.0" />
   </ItemGroup>
 
 </Project>
