--- a/Controls/TypeAhead/src/DotVVM.Contrib/DotVVM.Contrib.csproj
+++ b/Controls/TypeAhead/src/DotVVM.Contrib/DotVVM.Contrib.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net451</TargetFrameworks>
 	<PackageId>DotVVM.Contrib.TypeAhead</PackageId>
-    <PackageVersion>2.0.0-beta01</PackageVersion>
+    <PackageVersion>2.2.0</PackageVersion>
     <Authors>DotVVM Contrib</Authors>
     <Description>The TypeAhead control for DotVVM made by DotVVM Contrib community.</Description>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
