--- a/Controls/Select2/src/DotVVM.Contrib/DotVVM.Contrib.Select2.csproj
+++ b/Controls/Select2/src/DotVVM.Contrib/DotVVM.Contrib.Select2.csproj
@@ -23,7 +23,7 @@
 
   <ItemGroup>
     <EmbeddedResource Include="Scripts\DotVVM.Contrib.Select2.js" />
-    <EmbeddedResource Include="Scripts\select2\select2.min.css" />
+    <EmbeddedResource Include="Styles\select2\select2.min.css" />
     <EmbeddedResource Include="Scripts\select2\select2.min.js" />
   </ItemGroup>
 
