--- a/.dependabot/config.yml
+++ b/.dependabot/config.yml
@@ -4,90 +4,119 @@ update_configs:
 - package_manager: "dotnet:nuget"
   directory: "/Controls/BootstrapColorpicker/"
   update_schedule: "daily"
+  default_assignees:
+    - "MichalTichy"
   allowed_updates:
     - match:
         dependency_name: "DotVVM*"
 - package_manager: "dotnet:nuget"
   directory: "/Controls/BootstrapDatepicker/"
   update_schedule: "daily"
+  default_assignees:
+    - "MichalTichy"
   allowed_updates:
     - match:
         dependency_name: "DotVVM*"
 - package_manager: "dotnet:nuget"
   directory: "/Controls/CkEditorMinimal/"
   update_schedule: "daily"
+  default_assignees:
+    - "MichalTichy"
   allowed_updates:
     - match:
         dependency_name: "DotVVM*"
 - package_manager: "dotnet:nuget"
   directory: "/Controls/CrystalReportViewer/"
   update_schedule: "daily"
+  default_assignees:
+    - "MichalTichy"
   allowed_updates:
     - match:
         dependency_name: "DotVVM*"
 - package_manager: "dotnet:nuget"
   directory: "/Controls/FAIcon/"
   update_schedule: "daily"
+  default_assignees:
+    - "MichalTichy"
   allowed_updates:
     - match:
         dependency_name: "DotVVM*"
 - package_manager: "dotnet:nuget"
   directory: "/Controls/GoogleAnalyticsJavascript/"
   update_schedule: "daily"
+  default_assignees:
+    - "MichalTichy"
   allowed_updates:
     - match:
         dependency_name: "DotVVM*"
 - package_manager: "dotnet:nuget"
   directory: "/Controls/GoogleMap/"
   update_schedule: "daily"
+  default_assignees:
+    - "MichalTichy"
   allowed_updates:
     - match:
         dependency_name: "DotVVM*"
 - package_manager: "dotnet:nuget"
   directory: "/Controls/GoogleMap/"
   update_schedule: "daily"
+  default_assignees:
+    - "MichalTichy"
   allowed_updates:
     - match:
         dependency_name: "DotVVM*"
 - package_manager: "dotnet:nuget"
   directory: "/Controls/LoadablePanel/"
-  update_schedule: "daily"
+  default_assignees:
+    - "MichalTichy"
   allowed_updates:
     - match:
         dependency_name: "DotVVM*"
 - package_manager: "dotnet:nuget"
   directory: "/Controls/NoUiSlider/"
   update_schedule: "daily"
+  default_assignees:
+    - "MichalTichy"
   allowed_updates:
     - match:
         dependency_name: "DotVVM*"
 - package_manager: "dotnet:nuget"
   directory: "/Controls/PolicyView/"
   update_schedule: "daily"
+  default_assignees:
+    - "MichalTichy"
   allowed_updates:
     - match:
         dependency_name: "DotVVM*"
 - package_manager: "dotnet:nuget"
   directory: "/Controls/QrCode/"
   update_schedule: "daily"
+  default_assignees:
+    - "MichalTichy"
   allowed_updates:
     - match:
         dependency_name: "DotVVM*"
 - package_manager: "dotnet:nuget"
   directory: "/Controls/Select2/"
   update_schedule: "daily"
+  default_assignees:
+    - "MichalTichy"
   allowed_updates:
     - match:
         dependency_name: "DotVVM*"
 - package_manager: "dotnet:nuget"
   directory: "/Controls/TemplateSelector/"
   update_schedule: "daily"
+  default_assignees:
+    - "MichalTichy"
   allowed_updates:
     - match:
         dependency_name: "DotVVM*"
 - package_manager: "dotnet:nuget"
   directory: "/Controls/TypeAhead/"
   update_schedule: "daily"
+  default_assignees:
+    - "MichalTichy"
   allowed_updates:
     - match:
         dependency_name: "DotVVM*"
