--- a/Controls/ReactBridge/src/DotVVM.Contrib.Samples/DotVVM.Contrib.Samples.csproj
+++ b/Controls/ReactBridge/src/DotVVM.Contrib.Samples/DotVVM.Contrib.Samples.csproj
@@ -6,13 +6,14 @@
 		<Content Include="**\*.dothtml" />
 	</ItemGroup>
 	<ItemGroup>
+	  <Content Remove="wwwroot\Scripts\chartist.min.js" />
+	</ItemGroup>
+	<ItemGroup>
 		<None Remove="dotvvm_serialized_config.json.tmp" />
+		<None Remove="wwwroot\Scripts\ReactChartis.js" />
 	</ItemGroup>
 	<ItemGroup>
 	  <Content Include="Views\_master.dotmaster" />
-	</ItemGroup>
-	<ItemGroup>
-		<Folder Include="wwwroot\" />
 	</ItemGroup>
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore" Version="2.0.1" />
@@ -21,6 +22,13 @@
 	</ItemGroup>
   <ItemGroup>
     <DotNetCliToolReference Include="DotVVM.Compiler.Light" Version="1.1.0.1" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="wwwroot\Scripts\ReactChartis.js" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="wwwroot\Scripts\chartist.min.js" />
+    <None Include="wwwroot\Styles\chartist.min.css" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DotVVM.Contrib\DotVVM.Contrib.csproj" />
