--- a/Controls/LoadablePanel/src/DotVVM.Contrib.Samples/DotVVM.Contrib.Samples.csproj
+++ b/Controls/LoadablePanel/src/DotVVM.Contrib.Samples/DotVVM.Contrib.Samples.csproj
@@ -13,6 +13,7 @@
 	</ItemGroup>
 	<ItemGroup>
 		<None Remove="dotvvm_serialized_config.json.tmp" />
+		<None Remove="Views\PagingRepeater.dothtml" />
 		<None Remove="Views\Sample2.dothtml" />
 		<None Remove="Views\Sample3.dothtml" />
 	</ItemGroup>
@@ -20,7 +21,7 @@
 	  <Content Include="Views\_master.dotmaster" />
 	</ItemGroup>
 	<ItemGroup>
-		<PackageReference Include="DotVVM" Version="2.4.0.1" />
+		<PackageReference Include="DotVVM" Version="3.0.1" />
 		<PackageReference Include="Microsoft.AspNetCore" Version="2.0.2" />
 		<PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.0.2" />
 		<PackageReference Include="DotVVM.AspNetCore" Version="2.4.0.1" />
