--- a/Controls/LoadablePanel/src/DotVVM.Contrib.Samples/DotVVM.Contrib.Samples.csproj
+++ b/Controls/LoadablePanel/src/DotVVM.Contrib.Samples/DotVVM.Contrib.Samples.csproj
@@ -12,12 +12,16 @@
 	  <None Remove="wwwroot\NewFolder\**" />
 	</ItemGroup>
 	<ItemGroup>
+		<None Remove="Controls\Pager\Pager.js" />
 		<None Remove="dotvvm_serialized_config.json.tmp" />
 		<None Remove="Views\PagingRepeater.dothtml" />
 		<None Remove="Views\Sample2.dothtml" />
 		<None Remove="Views\Sample3.dothtml" />
 	</ItemGroup>
 	<ItemGroup>
+	  <Content Include="Controls\Pager\Pager.js">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </Content>
 	  <Content Include="Views\_master.dotmaster" />
 	</ItemGroup>
 	<ItemGroup>
