--- a/Controls/Directory.Build.props
+++ b/Controls/Directory.Build.props
@@ -1,5 +1,5 @@
 <Project>
   <PropertyGroup>
-    <DotvvmVersion>3.0.2</DotvvmVersion>
+    <DotvvmVersion>3.1.0-preview04-113251</DotvvmVersion>
   </PropertyGroup>
 </Project>
