--- a/Controls/LoadablePanel/src/DotVVM.Contrib.Samples/DotVVM.Contrib.Samples.csproj
+++ b/Controls/LoadablePanel/src/DotVVM.Contrib.Samples/DotVVM.Contrib.Samples.csproj
@@ -25,9 +25,9 @@
 	  <Content Include="Views\_master.dotmaster" />
 	</ItemGroup>
 	<ItemGroup>
-		<PackageReference Include="Microsoft.AspNetCore" Version="2.0.2" />
-		<PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.0.2" />
-		<PackageReference Include="DotVVM.AspNetCore" Version="$(DotvvmVersion)" />
+		<PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />
+		<PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.2.0" />
+		<PackageReference Include="DotVVM.AspNetCore" Version="3.1.1" />
 	</ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DotVVM.Contrib\DotVVM.Contrib.csproj" />
