--- a/Controls/LoadablePanel/src/DotVVM.Contrib.Samples/DotVVM.Contrib.Samples.csproj
+++ b/Controls/LoadablePanel/src/DotVVM.Contrib.Samples/DotVVM.Contrib.Samples.csproj
@@ -27,7 +27,7 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />
 		<PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.2.0" />
-		<PackageReference Include="DotVVM.AspNetCore" Version="3.1.1" />
+		<PackageReference Include="DotVVM.AspNetCore" Version="$(DotvvmVersion)" />
 	</ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DotVVM.Contrib\DotVVM.Contrib.csproj" />
