--- a/Controls/LoadablePanel/src/DotVVM.Contrib/DotVVM.Contrib.csproj
+++ b/Controls/LoadablePanel/src/DotVVM.Contrib/DotVVM.Contrib.csproj
@@ -29,7 +29,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="DotVVM" Version="3.1.1" />
+    <PackageReference Include="DotVVM" Version="$(DotvvmVersion)" />
     <PackageReference Include="Microsoft.TypeScript.MSBuild" Version="4.3.0-beta">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
