--- a/Controls/LoadablePanel/src/DotVVM.Contrib/DotVVM.Contrib.csproj
+++ b/Controls/LoadablePanel/src/DotVVM.Contrib/DotVVM.Contrib.csproj
@@ -1,9 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp2.0;net451</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;net472</TargetFrameworks>
     <PackageId>DotVVM.Contrib.LoadablePanel</PackageId>
-    <PackageVersion>3.1.0-preview01-final</PackageVersion>
+    <PackageVersion>3.1.1</PackageVersion>
     <Authors>DotVVM Contrib</Authors>
     <Description>The LoadablePanel control for DotVVM made by DotVVM Contrib community.</Description>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
