--- a/Controls/CookieBar/src/DotVVM.Contrib/DotVVM.Contrib.csproj
+++ b/Controls/CookieBar/src/DotVVM.Contrib/DotVVM.Contrib.csproj
@@ -43,7 +43,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="BuildWebCompiler" Version="1.12.405" />
+		<PackageReference Include="BuildWebCompiler" Version="1.12.405">
+			<PrivateAssets>all</PrivateAssets>
+		</PackageReference>
 		<PackageReference Include="DotVVM" Version="$(DotvvmVersion)" />
 	</ItemGroup>
 
