--- a/Controls/Directory.Build.props
+++ b/Controls/Directory.Build.props
@@ -1,6 +1,6 @@
 <Project>
   <PropertyGroup>
-    <DotvvmVersion>3.2.0</DotvvmVersion>
+    <DotvvmVersion>4.0.0-preview09-final</DotvvmVersion>
     <RigantiSeleniumVersion>2.0.1</RigantiSeleniumVersion>
   </PropertyGroup>
 </Project>
