--- a/Controls/CookieBar/src/DotVVM.Contrib.Tests/DotVVM.Contrib.Tests.csproj
+++ b/Controls/CookieBar/src/DotVVM.Contrib.Tests/DotVVM.Contrib.Tests.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
 
     <IsPackable>false</IsPackable>
   </PropertyGroup>
@@ -17,15 +17,14 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
-    <PackageReference Include="xunit" Version="2.4.1" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1">
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="$(MicrosoftNETTestSdkVersion)" />
+    <PackageReference Include="xunit" Version="$(XunitVersion)" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="$(XunitVersion)">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Riganti.Selenium.xUnitIntegration" Version="2.0.4" />
-    <PackageReference Include="Riganti.Selenium.AssertApi" Version="2.0.4" />
-    <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.1" />
+    <PackageReference Include="Riganti.Selenium.xUnitIntegration" Version="$(RigantiSeleniumVersion)" />
+    <PackageReference Include="Riganti.Selenium.AssertApi" Version="$(RigantiSeleniumVersion)" />
   </ItemGroup>
 
 </Project>
