--- a/Controls/_template/src/DotVVM.Contrib.ControlName.Samples/DotVVM.Contrib.ControlName.Samples.csproj
+++ b/Controls/_template/src/DotVVM.Contrib.ControlName.Samples/DotVVM.Contrib.ControlName.Samples.csproj
@@ -20,6 +20,6 @@
 		<PackageReference Include="DotVVM.AspNetCore" Version="$(DotvvmVersion)" />
 	</ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\DotVVM.Contrib\DotVVM.Contrib.csproj" />
+    <ProjectReference Include="..\DotVVM.Contrib.ControlName\DotVVM.Contrib.ControlName.csproj" />
   </ItemGroup>
 </Project>
