--- a/Controls/BootstrapColorpicker/src/DotVVM.Contrib.BootstrapColorpicker/DotVVM.Contrib.BootstrapColorpicker.csproj
+++ b/Controls/BootstrapColorpicker/src/DotVVM.Contrib.BootstrapColorpicker/DotVVM.Contrib.BootstrapColorpicker.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.1</TargetFrameworks>
+    <TargetFrameworks>netstandard2.1;net472</TargetFrameworks>
 	<PackageId>DotVVM.Contrib.BootstrapColorpicker</PackageId>
     <AssemblyName>DotVVM.Contrib.BootstrapColorpicker</AssemblyName>
     <Description>The BootstrapColorpicker control for DotVVM made by DotVVM Contrib community.</Description>
