--- a/Controls/BootstrapDatepicker/src/DotVVM.Contrib.BootstrapDatepicker/DotVVM.Contrib.BootstrapDatepicker.csproj
+++ b/Controls/BootstrapDatepicker/src/DotVVM.Contrib.BootstrapDatepicker/DotVVM.Contrib.BootstrapDatepicker.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>netstandard2.1</TargetFrameworks>
+		<TargetFrameworks>netstandard2.1;net472</TargetFrameworks>
 		<PackageId>DotVVM.Contrib.BootstrapDatepicker</PackageId>
 		<AssemblyName>DotVVM.Contrib.BootstrapDatepicker</AssemblyName>
 		<Description>The BootstrapDatepicker control for DotVVM made by DotVVM Contrib community.</Description>
