--- a/Controls/PolymorphTemplateSelector/src/DotVVM.Contrib.PolymorphTemplateSelector/DotVVM.Contrib.PolymorphTemplateSelector.csproj
+++ b/Controls/PolymorphTemplateSelector/src/DotVVM.Contrib.PolymorphTemplateSelector/DotVVM.Contrib.PolymorphTemplateSelector.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>netstandard2.1</TargetFrameworks>
+		<TargetFrameworks>netstandard2.1;net472</TargetFrameworks>
 		<PackageId>DotVVM.Contrib.PolymorphTemplateSelector</PackageId>
 		<AssemblyName>DotVVM.Contrib.PolymorphTemplateSelector</AssemblyName>
 		<LangVersion>9.0</LangVersion>
