--- a/Controls/QrCode/src/DotVVM.Contrib.QrCode/DotVVM.Contrib.QrCode.csproj
+++ b/Controls/QrCode/src/DotVVM.Contrib.QrCode/DotVVM.Contrib.QrCode.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>netstandard2.1</TargetFrameworks>
+		<TargetFrameworks>netstandard2.1;net472</TargetFrameworks>
 		<PackageId>DotVVM.Contrib.QrCode</PackageId>
 		<AssemblyName>DotVVM.Contrib.QrCode</AssemblyName>
 		<Description>The QrCode control for DotVVM made by DotVVM Contrib community.</Description>
