--- a/Controls/TemplateSelector/src/DotVVM.Contrib.TemplateSelector/DotVVM.Contrib.TemplateSelector.csproj
+++ b/Controls/TemplateSelector/src/DotVVM.Contrib.TemplateSelector/DotVVM.Contrib.TemplateSelector.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>netstandard2.1</TargetFrameworks>
+		<TargetFrameworks>netstandard2.1;net472</TargetFrameworks>
 		<PackageId>DotVVM.Contrib.TemplateSelector</PackageId>
 		<AssemblyName>DotVVM.Contrib.TemplateSelector</AssemblyName>
 		<PackageVersion>2.4.0</PackageVersion>
