--- a/Controls/CookieBar/src/DotVVM.Contrib.CookieBar/DotVVM.Contrib.CookieBar.csproj
+++ b/Controls/CookieBar/src/DotVVM.Contrib.CookieBar/DotVVM.Contrib.CookieBar.csproj
@@ -10,6 +10,7 @@
 
 	<ItemGroup>
 		<None Remove="CookieBar.dotcontrol" />
+		<None Remove="Styles\DotVVM.Contrib.CookieBar.min.css" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -20,6 +21,7 @@
 
 	<ItemGroup>
 		<EmbeddedResource Include="Scripts\DotVVM.Contrib.CookieBar.js" />
+		<EmbeddedResource Include="Styles\DotVVM.Contrib.CookieBar.min.css" />
 		<Content Include="Styles\DotVVM.Contrib.CookieBar.scss" />
 	</ItemGroup>
 
