--- a/Controls/CookieBar/src/DotVVM.Contrib.CookieBar/DotVVM.Contrib.CookieBar.csproj
+++ b/Controls/CookieBar/src/DotVVM.Contrib.CookieBar/DotVVM.Contrib.CookieBar.csproj
@@ -29,7 +29,7 @@
 		<PackageReference Include="BuildWebCompiler" Version="1.12.405">
 			<PrivateAssets>all</PrivateAssets>
 		</PackageReference>
-		<PackageReference Include="DotVVM" Version="4.1.0-preview04-final" />
+		<PackageReference Include="DotVVM" Version="4.0.7" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
 		<PackageReference Include="RecordException" Version="0.1.2" />
 	</ItemGroup>
