--- a/Controls/CookieBar/src/DotVVM.Contrib/DotVVM.Contrib.csproj
+++ b/Controls/CookieBar/src/DotVVM.Contrib/DotVVM.Contrib.csproj
@@ -39,9 +39,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="BuildWebCompiler" Version="1.12.405">
-			<PrivateAssets>all</PrivateAssets>
-		</PackageReference>
+    <PackageReference Include="BuildWebCompiler2022" Version="1.14.9.1" />
 		<PackageReference Include="DotVVM" Version="$(DotvvmVersion)" />
 	</ItemGroup>
 
